--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
         
         <!-- =============== jdom =============== -->
         <dependency>
-            <groupId>org.jdom</groupId>
+            <groupId>org.jopendocument</groupId>
             <artifactId>jdom</artifactId>
-            <version>2.0.2</version>
+            <version>1.1.1</version>
         </dependency>
         
     </dependencies>
