--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <version>1.1.1</version>
         </dependency>
         
+        <!-- =============== reflections =============== -->
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC1</version>
+        </dependency>
+        
     </dependencies>
   
   
