--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
 	<version>0.0.2</version>
 	<name>Layout Generator</name>
 	<description>Tool for automatic generation of graphical layout from object-oriented data model.</description>
+	
+	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 
 	<dependencies>
@@ -40,7 +44,14 @@
 			<artifactId>reflections</artifactId>
 			<version>0.9.9-RC1</version>
 		</dependency>
-
+        
+        <!-- ================ JUnit ================ -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+		
 	</dependencies>
 
 
