--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,28 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.zcu.kiv</groupId>
 	<artifactId>layout-generator</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3</version>
 	<name>Layout Generator</name>
 	<description>Tool for automatic generation of graphical layout from object-oriented data model.</description>
 	
 	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    
+    
+    <build>
+        <plugins>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>example/**</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+        </plugins>
+    </build>
 
 
 	<dependencies>
