--- a/pom.xml
+++ b/pom.xml
@@ -6,23 +6,36 @@
 	<version>0.0.3</version>
 	<name>Layout Generator</name>
 	<description>Tool for automatic generation of graphical layout from object-oriented data model.</description>
-	
+
 	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
-    
+
+
     <build>
         <plugins>
             <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<excludes>
 						<exclude>example/**</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<!-- Enables compilation for different target JDK (support fo older JDKs) -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+
         </plugins>
     </build>
 
@@ -59,20 +72,20 @@
 			<artifactId>reflections</artifactId>
 			<version>0.9.9-RC1</version>
 		</dependency>
-        
+
         <!-- ================ JUnit ================ -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
-		
+
 	</dependencies>
 
 
 	<repositories>
 
-		<!-- Local repository for in-house libs and jars not available in public 
+		<!-- Local repository for in-house libs and jars not available in public
 			repos -->
 		<repository>
 			<id>cz.zcu.kiv.formgen.repo.local</id>
@@ -80,6 +93,6 @@
 		</repository>
 
 	</repositories>
-	
+
 
 </project>
