--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
+		
+		<!-- ================ Commons-Collections =============== -->
+		<dependency>
+		    <groupId>commons-collections</groupId>
+		    <artifactId>commons-collections</artifactId>
+		    <version>3.2.1</version>
+		</dependency>
 
 	</dependencies>
 
