--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.zcu.kiv</groupId>
 	<artifactId>layout-generator</artifactId>
-	<version>0.0.7</version>
+	<version>0.0.8</version>
 	<name>Layout Generator</name>
 	<description>Tool for automatic generation of graphical layout from object-oriented data model.</description>
 
@@ -53,11 +53,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.5</version>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jdk14</artifactId>
-			<version>1.7.5</version>
-		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
 
 		<!-- =============== jdom =============== -->
 		<dependency>
