--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,13 +1,16 @@
 # Define the root logger
-#log4j.rootLogger = DEBUG, FILE
-log4j.rootLogger = INFO, CONSOLE
+#log4j.rootLogger = WARN, FILE
+log4j.rootLogger = WARN, CONSOLE
+
+# Logger for this project
+log4j.logger.cz.zcu.kiv.formgen = TRACE
 
 
 # Direct log messages to console
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Target=System.err
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} %-5p %c{1} - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} %-5p %c{1}:  %m%n
 
 
 # File appender
