--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 			<version>1.0.5</version>
 		</dependency>
 
-		<!-- =============== slf4j =============== -->
+		<!-- =============== logging (slf4j + log4j) =============== -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -73,11 +73,16 @@
 			<version>0.9.9-RC1</version>
 		</dependency>
 
-        <!-- ================ JUnit ================ -->
+        <!-- ================ JUnit testing ================ -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
+		</dependency>
+		<dependency>
+		    <groupId>gsbase</groupId>
+		    <artifactId>gsbase</artifactId>
+		    <version>2.0.1</version>
 		</dependency>
 		
 		<!-- ================ Commons-Collections =============== -->
