--- a/pom.xml
+++ b/pom.xml
@@ -1,117 +1,142 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>cz.zcu.kiv</groupId>
-	<artifactId>layout-generator</artifactId>
-	<version>0.0.13</version>
-	<name>Layout Generator</name>
-	<description>Tool for automatic generation of graphical layout from object-oriented data model.</description>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>cz.zcu.kiv</groupId>
+    <artifactId>layout-generator</artifactId>
+    <version>0.0.13</version>
+    <name>Layout Generator</name>
+    <description>Tool for automatic generation of graphical layout from object-oriented data model.</description>
 
-	<properties>
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 
     <build>
         <plugins>
+        
             <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<excludes>
-						<exclude>example/**</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <excludes>
+                        <exclude>example/**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
 
-			<!-- Enables compilation for different target JDK (support fo older JDKs) -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
+            <!-- Enables compilation for different target JDK (support for older JDKs) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+
+            <!-- Creating source JAR -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Creating javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
         </plugins>
     </build>
 
 
-	<dependencies>
-	
-	   <!-- ================= odml-java-lib ================== -->
-		<dependency>
-			<groupId>org.gnode</groupId>
-			<artifactId>odml-java-lib</artifactId>
-			<version>1.0.7</version>
-		</dependency>
+    <dependencies>
 
-		<!-- =============== logging (slf4j + log4j) =============== -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
-		</dependency>
+        <!-- ================= odml-java-lib ================== -->
+        <dependency>
+            <groupId>org.gnode</groupId>
+            <artifactId>odml-java-lib</artifactId>
+            <version>1.0.7</version>
+        </dependency>
+
+        <!-- =============== logging (slf4j + log4j) =============== -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
         </dependency>
 
-		<!-- =============== jdom =============== -->
-		<dependency>
-			<groupId>org.jopendocument</groupId>
-			<artifactId>jdom</artifactId>
-			<version>1.1.1</version>
-		</dependency>
+        <!-- =============== jdom =============== -->
+        <dependency>
+            <groupId>org.jopendocument</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
-		<!-- =============== reflections =============== -->
-		<dependency>
-			<groupId>org.reflections</groupId>
-			<artifactId>reflections</artifactId>
-			<version>0.9.9-RC1</version>
-		</dependency>
+        <!-- =============== reflections =============== -->
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC1</version>
+        </dependency>
 
         <!-- ================ JUnit testing ================ -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-		</dependency>
-		<dependency>
-		    <groupId>gsbase</groupId>
-		    <artifactId>gsbase</artifactId>
-		    <version>2.0.1</version>
-		</dependency>
-		
-		<!-- ================ Commons-Collections =============== -->
-		<dependency>
-		    <groupId>commons-collections</groupId>
-		    <artifactId>commons-collections</artifactId>
-		    <version>3.2.1</version>
-		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>gsbase</groupId>
+            <artifactId>gsbase</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
-	</dependencies>
+        <!-- ================ Commons-Collections =============== -->
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+
+    </dependencies>
 
 
-	<repositories>
-	   
-	    <!-- Nexus repository (eeg.kiv.zcu.cz) -->
+    <repositories>
+
+        <!-- Local repository for in-house libs and jars not available in public repos -->
         <repository>
-            <id>releases</id>
-            <url>http://eeg.kiv.zcu.cz:8081/nexus/content/repositories/releases/</url>
+            <id>cz.zcu.kiv.formgen.repo.local</id>
+            <url>file://${basedir}/repo</url>
         </repository>
 
-		<!-- Local repository for in-house libs and jars not available in public repos -->
-		<repository>
-			<id>cz.zcu.kiv.formgen.repo.local</id>
-			<url>file://${basedir}/repo</url>
-		</repository>
-
-	</repositories>
+    </repositories>
 
 
 </project>
