First experiments with the odml-gui namespace using Anubhav's version of odml-java-lib (with the GUIHelper class).

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,9 +1,9 @@
 # Define the root logger
 #log4j.rootLogger = WARN, FILE
-log4j.rootLogger = OFF, CONSOLE
+log4j.rootLogger = WARN, CONSOLE
 
 # Logger for this project
-log4j.logger.cz.zcu.kiv.formgen = OFF
+log4j.logger.cz.zcu.kiv.formgen = TRACE
 
 
 # Direct log messages to console
