--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>org.gnode</groupId>
             <artifactId>odml-java-lib</artifactId>
-            <version>1.0.7</version>
+            <version>TMP-2</version>
         </dependency>
 
         <!-- =============== logging (slf4j + log4j) =============== -->
@@ -124,6 +124,13 @@
             <artifactId>commons-collections</artifactId>
             <version>3.2.1</version>
         </dependency>
+        
+        <!-- ================== Joda time =================== -->
+        <dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		    <version>2.4</version>
+		</dependency>
 
     </dependencies>
 
